welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:12: error: not found: type int
def remplirTableau(t:Array[Color],x:int){
                                    ^